# artifact

./: Cargo.toml
.art/: settings.toml
artifact-data/: Cargo.toml
artifact-data/src/: artifact.rs  dev_prelude.rs  graph.rs  implemented.rs  intermediate.rs  lib.rs  lint.rs  modify.rs  project.rs  raw.rs  raw_names.rs  settings.rs
artifact-data/src/test/: artifact.rs  dev_prelude.rs  family.rs  framework.rs  graph.rs  implemented.rs  name.rs  raw.rs
artifact-lib/: Cargo.toml
artifact-lib/src/: dev_prelude.rs  expand_names.rs  expected.rs  family.rs  lib.rs  lint.rs  name.rs
design/: cli.md  purpose.md
src/: check.rs  dev_prelude.rs  fmt.rs  init.rs  lib.rs  ls.rs  main.rs
src/serve/: handler.rs
web-ui/: default.nix  elm-package.json  env  justfile
web-ui/src/: Models.elm
web-ui/src/Artifacts/: Commands.elm  Models.elm  Update.elm  View.elm
web-ui/tests/: elm-package.json
